--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,6 @@
     "48": "icons/sturla-48.ico",
     "96": "icons/sturla-96.ico"
   },
-
   "content_scripts": [
     {
       "matches": 
@@ -20,6 +19,15 @@
     ],
       "js": ["rotateMe.js"]
     }
-  ]
+  ],
+  "background": {
+    "scripts": ["background.js"]
+  },
+  "browser_action": {
+    "default_icon": {
+      "16": "icons/sturla-16.png",
+      "32": "icons/sturla-32.png"
+    }
+    }
 
 }
