--- a/manifest.json
+++ b/manifest.json
@@ -3,11 +3,11 @@
   "description": "Rotates the web page you are on",
   "manifest_version": 2,
   "name": "RotateMe",
-  "version": "1.0",
+  "version": "1.1",
   "homepage_url": "https://sturlas.me/",
   "icons": {
-    "48": "icons/sturla-48.ico",
-    "96": "icons/sturla-96.ico"
+    "48": "icons/sturla-48.png",
+    "96": "icons/sturla-96.png"
   },
   "content_scripts": [
     {
