fixing it for the better

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "description": "Rotates the web page you are on",
   "manifest_version": 2,
   "name": "RotateMe",
-  "version": "1.1",
+  "version": "1.2",
   "homepage_url": "https://sturlas.me/",
   "icons": {
     "48": "icons/sturla-48.png",
@@ -24,6 +24,7 @@
     "scripts": ["background.js"]
   },
   "browser_action": {
+    "default_popup": "popup/rotate_options.html",
     "default_icon": {
       "16": "icons/sturla-16.png",
       "32": "icons/sturla-32.png"
