--- a/manifest.json
+++ b/manifest.json
@@ -3,12 +3,16 @@
   "description": "Rotates the web page you are on",
   "manifest_version": 2,
   "name": "RotateMe",
-  "version": "1.2",
+  "version": "1.3",
   "homepage_url": "https://sturlas.me/",
   "icons": {
     "48": "icons/sturla-48.png",
     "96": "icons/sturla-96.png"
   },
+  "permissions": [
+    "activeTab",
+    "storage"
+  ],
   "content_scripts": [
     {
       "matches": 
@@ -17,7 +21,7 @@
         "*://*.mozilla.org/*",
         "*://*.sturlas.me/*"
     ],
-      "js": ["rotateMe.js"]
+      "js": ["./content_scripts/rotateMe.js"]
     }
   ],
   "background": {
@@ -29,6 +33,11 @@
       "16": "icons/sturla-16.png",
       "32": "icons/sturla-32.png"
     }
-    }
+    },
+    "browser_specific_settings": {
+        "gecko": {
+          "id": "rotate@sturla.me"
+        }
+      }
 
 }
