--- a/manifest.json
+++ b/manifest.json
@@ -1,43 +1,44 @@
 {
-
-  "description": "Rotates the web page you are on",
-  "manifest_version": 2,
-  "name": "RotateMe",
-  "version": "1.3",
-  "homepage_url": "https://sturlas.me/",
-  "icons": {
-    "48": "icons/sturla-48.png",
-    "96": "icons/sturla-96.png"
-  },
-  "permissions": [
-    "activeTab",
-    "storage"
-  ],
-  "content_scripts": [
-    {
-      "matches": 
-      [
-        "*://*/*",
-        "*://*.mozilla.org/*",
-        "*://*.sturlas.me/*"
+    "description": "Rotates the web page you are on",
+    "manifest_version": 2,
+    "name": "RotateMe",
+    "version": "1.31",
+    "homepage_url": "https://sturlas.me/",
+    "icons": {
+        "48": "icons/sturla-48.png",
+        "96": "icons/sturla-96.png"
+    },
+    "permissions": [
+        "activeTab",
+        "storage"
     ],
-      "js": ["./content_scripts/rotateMe.js"]
-    }
-  ],
-  "background": {
-    "scripts": ["background.js"]
-  },
-  "browser_action": {
-    "default_popup": "popup/rotate_options.html",
-    "default_icon": {
-      "16": "icons/sturla-16.png",
-      "32": "icons/sturla-32.png"
-    }
+    "content_scripts": [
+        {
+            "matches": [
+                "*://*/*",
+                "*://*.mozilla.org/*",
+                "*://*.sturlas.me/*"
+            ],
+            "js": [
+                "./content_scripts/rotateMe.js"
+            ]
+        }
+    ],
+    "background": {
+        "scripts": [
+            "background.js"
+        ]
+    },
+    "browser_action": {
+        "default_popup": "popup/rotate_options.html",
+        "default_icon": {
+            "16": "icons/sturla-16.png",
+            "32": "icons/sturla-32.png"
+        }
     },
     "browser_specific_settings": {
         "gecko": {
-          "id": "rotate@sturla.me"
+            "id": "{e866677f-fdd1-4df0-845b-81b6612c93f7}"
         }
-      }
-
+    }
 }
