--- a/manifest.json
+++ b/manifest.json
@@ -2,11 +2,11 @@
     "description": "Rotates the web page you are on",
     "manifest_version": 2,
     "name": "RotateMe",
-    "version": "1.32",
-    "homepage_url": "https://sturlas.me/",
+    "version": "1.50",
+    "homepage_url": "https://sturlas.me/about/rotateMe",
     "icons": {
-        "48": "icons/sturla-48.png",
-        "96": "icons/sturla-96.png"
+        "48": "src/icons/logo_icon.svg",
+        "96": "src/icons/logo_icon.svg"
     },
     "permissions": [
         "activeTab",
@@ -20,21 +20,13 @@
                 "*://*.sturlas.me/*"
             ],
             "js": [
-                "./content_scripts/rotateMe.js"
+                "./src/rotateMe.js"
             ]
         }
     ],
-    "background": {
-        "scripts": [
-            "background.js"
-        ]
-    },
     "browser_action": {
-        "default_popup": "popup/rotate_options.html",
-        "default_icon": {
-            "16": "icons/sturla-16.png",
-            "32": "icons/sturla-32.png"
-        }
+        "default_popup": "src/popup/rotate_options.html",
+        "default_icon": "src/icons/logo_icon.svg"
     },
     "browser_specific_settings": {
         "gecko": {
