--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
     "description": "Rotates the web page you are on",
     "manifest_version": 2,
     "name": "RotateMe",
-    "version": "1.52",
-    "homepage_url": "https://sturlas.me/about/rotateMe",
+    "version": "1.53",
+    "homepage_url": "https://sturlas.me/about/rotateme",
     "icons": {
         "48": "src/icons/logo_icon.svg",
         "96": "src/icons/logo_icon.svg"
